--- a/Javascript projects/Counter/index.html
+++ b/Javascript projects/Counter/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <div class="container">
+      <div class="container">l
         <h1>Counter</h1>
         <span id="value">0</span>
         <div class="button-container">
