--- a/Javascript projects/Restaurant Menu/index.html
+++ b/Javascript projects/Restaurant Menu/index.html
@@ -29,7 +29,7 @@
       <div class="section-center">
         <!-- single item -->
         <article class="menu-item">
-          <img src="./img/item1.jpg" class="photo" alt="menu item" />
+          <img src="./img/item1.jpg" class="photo" width ="10px" alt="menu item" />
           <div class="item-info">
             <header>
               <h4>Chicken Biryani</h4>
