--- a/Javascript projects/Color Flipper/hex.html
+++ b/Javascript projects/Color Flipper/hex.html
@@ -14,6 +14,6 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
     </main>
-    <script src="./hex.js"></script>
+    <script src="./js/hex.js"></script>
   </body>
 </html>
