--- a/Javascript projects/Color Flipper/index.html
+++ b/Javascript projects/Color Flipper/index.html
@@ -30,6 +30,6 @@
       </div>
     </main>
     <!-- javascript -->
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
