--- a/Javascript projects/Our Reviews/index.html
+++ b/Javascript projects/Our Reviews/index.html
@@ -20,7 +20,7 @@
         <!-- review -->
         <article class="review">
           <div class="img-container">
-            <img src="./yaseen.jpg" width="100px" id="person.img" alt="" />
+            <img src="./img/yaseen.jpg" width="100px" id="person-img" alt="Image" />
           </div>
           <h4 id="author">Shaik Mohammad Yaseen</h4>
           <p id="job">Web developer</p>
@@ -31,10 +31,10 @@
           <!-- prev next buttons -->
           <div class="button-container">
             <button class="prev-btn">
-              <i class="fas fa-chevron-left"></i>
+              <i class="fas fa-chevron-left">❮</i>
             </button>
             <button class="next-btn">
-              <i class="fas fa-chevron-right"></i>
+              <i class="fas fa-chevron-right">❯</i>
             </button>
           </div>
           <!-- random buttton -->
