--- a/Javascript projects/Our Reviews/index.html
+++ b/Javascript projects/Our Reviews/index.html
@@ -38,7 +38,7 @@
             </button>
           </div>
           <!-- random buttton -->
-          <button class="random-btn">suprise me</button>
+          <button class="random-btn">surprise me</button>
         </article>
       </section>
     </main>
