--- a/Javascript projects/Navbar/index.html
+++ b/Javascript projects/Navbar/index.html
@@ -64,7 +64,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    <aside></aside>
     <script src="./app.js"></script>
   </body>
 </html>
