--- a/Javascript projects/06-modal/index.html
+++ b/Javascript projects/06-modal/index.html
@@ -5,25 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal project</title>
-    <link rel="stylesheet" href="./Css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./Css/style.css" />
   </head>
   <body>
-
     <!-- hero -->
-<header class="hero">
-    <div class="banner">
+    <header class="hero">
+      <div class="banner">
         <h1>Modal Project</h1>
-        <button class="btn modal-btn">Open modal</button>
-    </div>
-</header>
-<!-- end of the hero -->
-<!-- modal -->
-<div class="modal-overlay"></div>
-<div class="modal-container"></div>
-<h3>modal content</h3>
-<button class="close-btn"></button>
-<i class="fas fa-times"></i>
+        <button class="btn modal-btn">
+          Open modal
+        </button>
+      </div>
+    </header>
+    <!-- end of the hero -->
+    <!-- modal -->
+    <div class="modal-overlay"></div>
+    <div class="modal-container"></div>
+    <h3>modal content</h3>
+    <button class="close-btn"></button>
+    <i class="fas fa-times"></i>
+
     <!-- javascript -->
-    <script src="./js/app.js"></script>r
+    <script src="./js/app.js"></script>
+    
   </body>
 </html>
