restaurant menu completed

--- a/Javascript projects/08-Restaurant-Menu/index.html
+++ b/Javascript projects/08-Restaurant-Menu/index.html
@@ -8,7 +8,7 @@
     <!-- font awesome -->
     <link />
 
-    <!-- styles -->
+    <!-- styles -->,
     <link rel="stylesheet" href="Css/Menu.css" />
   </head>
   <body>
